src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Birthdate_Month_Day__c</fullName>
        <formula>TEXT(Month(Birthdate)) + &apos;/&apos; + TEXT(Day(Birthdate))</formula>
        <label>Birthdate (Month/Day)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <picklist>
            <picklistValues>
                <fullName>Animal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billiards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bowling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dating Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eating Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertaining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exercise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going to Movies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hiking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horseback Riding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Listening to Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorcycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playing Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playing Music</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Key_Influencer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Influencer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Professional_Football_Team__c</fullName>
        <label>Professional Football Team</label>
        <picklist>
            <picklistValues>
                <fullName>Arizona Cardinals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta Falcons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Ravens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffalo Bills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carolina Panthers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago Bears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cincinnati Bengals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleveland Browns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas Cowboys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver Broncos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detroit Lions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Bay Packers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houston Texans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indianapolis Colts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacksonville Jaguars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas City Chiefs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miami Dolphins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota Vikings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New England Patriots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Orleans Saints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York Giants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York Jets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oakland Raiders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philadelphia Eagles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pittsburgh Steelers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Louis Rams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego Chargers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco 49ers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seattle Seahawks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tampa Bay Buccaneers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Back Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>